<resources>
    <string name="app_name">TerritoryCast</string>
    <string name="app_version" translatable="false">0.3</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="territorycast" translatable="false">TerritoryCast</string>
    <string name="urlalberapps" translatable="false">blog.alberapps.com</string>
    <string name="large_text" translatable="false"></string>
    <string name="error_red">Error en la conexión</string>
    <string name="sin_informacion">Sin información</string>
    <string name="favorite" translatable="false">Favorite</string>
    <string name="error_no_metadata" translatable="false">Unable to retrieve metadata.</string>
    <string name="browse_genres">Podcasts</string>
    <string name="browse_genre_subtitle">Agrupados por mes y año de emisión</string>
    <string name="browse_musics_by_genre_subtitle" translatable="false">Podcasts %1$s</string>
    <string name="random_queue_title" translatable="false">Random music</string>
    <string name="error_no_connection" translatable="false">Cannot connect to server. Please, check your Internet connectivity.</string>
    <string name="error_loading_media" translatable="false">Error Loading Media</string>
    <string name="casting_to_device" translatable="false">Casting to %1$s</string>
    <string name="currently_playing_song" translatable="false">Song currently playing</string>
    <string name="currently_playing_artist" translatable="false">Artist of currently playing song</string>
    <string name="currently_playing_extra_info" translatable="false">Extra info for currently playing song</string>
    <string name="play_item" translatable="false">Play item</string>
    <string name="play_pause" translatable="false">play or pause</string>
    <string name="skip_next" translatable="false">skip to next</string>
    <string name="skip_prev" translatable="false">skip to previous</string>
    <string name="touch_to_cast" translatable="false">Touch to connect to a Google Cast device</string>
    <string name="home_title" translatable="false">TerritoryCast TV</string>
    <string name="related_content_header" translatable="false">You may also like</string>
    <string name="action_listen" translatable="false">Listen</string>
    <string name="open_content_drawer" translatable="false">Open the main menu</string>
    <string name="close_content_drawer" translatable="false">Close the main menu</string>
    <string name="placeholder_message" translatable="false">This is a placeholder for your application code.</string>
    <string name="drawer_allmusic_title" translatable="false">All Music</string>
    <string name="drawer_playlists_title" translatable="false">Playlists</string>
    <string name="now_playing" translatable="false">Now Playing</string>
    <string name="background_image_str" translatable="false">Background image for album art</string>
    <string name="search_queue_title" translatable="false">Search results</string>
    <string name="no_search_results" translatable="false">No search results.</string>
    <string name="loading" translatable="false">Loading…</string>
    <string name="media_route_menu_title" translatable="false">Play on…</string>
    <string name="preferencias">Preferencias</string>
    <string name="comunicacion">Comunicación</string>
    <string name="compartir">Compartir</string>
    <string name="enviar">Enviar</string>
    <string name="podcast" translatable="false">Podcast</string>
    <string name="informacion">El Programa</string>
    <string name="title_activity_detalle_noticia">Noticia</string>
    <string name="title_activity_settings" translatable="false">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations" translatable="false">Enable social recommendations</string>
    <string name="pref_description_social_recommendations" translatable="false">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name" translatable="false">Display name</string>
    <string name="pref_default_display_name" translatable="false">John Smith</string>
    <string name="pref_title_add_friends_to_messages" translatable="false">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync" translatable="false">Data &amp; sync</string>
    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>
    <string name="pref_header_notifications" translatable="false">Notifications</string>
    <string name="pref_title_new_message_notifications" translatable="false">New message notifications</string>
    <string name="pref_title_ringtone" translatable="false">Ringtone</string>
    <string name="pref_ringtone_silent" translatable="false">Silent</string>
    <string name="pref_title_vibrate" translatable="false">Vibrate</string>
    <string name="title_activity_info" translatable="false">InfoActivity</string>
    <string name="error_datos">Error al recuperar la información</string>
    <string name="menu_programas">Programas</string>
    <string name="menu_programa_actual">Programa Actual</string>
    <string name="el_programa">El Programa</string>
    <string name="cargando">Cargando...</string>
    <string name="share_principal" translatable="false">TerritoryCast by AlberApps - blog.alberapps.com</string>
    <string name="share_noticia" translatable="false">TerritoryCast: </string>
    <string name="social_twitter" translatable="false">Twitter</string>
    <string name="social_facebook" translatable="false">Fecebook</string>
    <string name="social_blog" translatable="false">blog.alberapps.com</string>
    <string name="detalle_licencia">"TerritoryCast - Cliente abierto de noticias y reproductor de podcasts     Copyright © 2018 Alberto Montiel       This program is free software: you can redistribute it and/or modify    it under the terms of the GNU General Public License as published by    the Free Software Foundation, either version 3 of the License, or    (at your option) any later version.       This program is distributed in the hope that it will be useful,    but WITHOUT ANY WARRANTY; without even the implied warranty of    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the    GNU General Public License for more details.       You should have received a copy of the GNU General Public License    along with this program.  If not, see http://www.gnu.org/licenses.      "</string>
    <string name="legal_b">Los nombres de empresas y logotipos de estas o sus productos, así como los datos obtenidos de sus páginas web, son propiedad de sus respectivos titulares y son reconocidos por esta aplicación. \t</string>
    <string name="referencias">Referencias</string>
    <string name="referencias_infoapp" translatable="false">JSoup jsoup.org - MIT http://jsoup.org/license\n
        Google Material Design github.com/google/material-design-icons - http://creativecommons.org/licenses/by/4.0 \n
        UniversalMusicPlayer github.com/googlesamples/android-UniversalMusicPlayer - Apache http://www.apache.org/licenses/LICENSE-2.0
	</string>
    <string name="aviso_legal_analytics" translatable="false">
    Aviso legal de Google Analytics
    \nEsta aplicación utiliza Google Analytics, un servicio analítico de web prestado por Google, Inc., una compañía de Delaware cuya oficina principal esta en 1600 Amphitheatre Parkway, Mountain View (California), CA 94043, Estados Unidos (\"Google\").
	La información que genera acerca de su uso de la aplicación (incluyendo su dirección IP) será directamente transmitida y archivada por Google en los servidores de Estados Unidos. Google usará esta información por cuenta nuestra con el propósito de seguir la pista de su uso de la aplicación, recopilando informes de la actividad de la aplicación y prestando otros servicios relacionados con la actividad de la aplicación y el uso de Internet. Google podrá transmitir dicha información a terceros cuando así se lo requiera la legislación, o cuando dichos terceros procesen la información por cuenta de Google. Google no asociará su dirección IP con ningún otro dato del que disponga Google.
	Puede Usted rechazar el tratamiento de los datos o la información rechazando el uso de esta función mediante la selección de la configuración apropiada en las preferencias de la aplicación, sin embargo, esto dificultará al desarrollador el estudio de nuevas funciones y el análisis de errores. Al utilizar esta aplicación Usted consiente el tratamiento de información acerca de Usted por Google en la forma y para los fines arriba indicados.
    </string>
    <string name="aplicacion">Aplicación</string>
    <string name="appinfo">Información</string>
    <string name="app_licencia" translatable="false">http://www.gnu.org/licenses/gpl.html</string>
    <string name="app_autor" translatable="false">Alberto Montiel (2018)</string>
    <string name="app_autor_mail" translatable="false">alberapps@gmail.com</string>
    <string name="app_autor_web" translatable="false">blog.alberapps.com</string>
    <string name="app_licencia_desc">Licencia GNU GPLv3</string>
    <string name="byalberapps" translatable="false">by AlberApps</string>
    <string name="analytics_on" translatable="false">Google Analytics</string>
    <string name="analytics_on_desc">Permitir el envío de estadísticas anónimas de uso y control de errores</string>
    <string name="notification_channel" translatable="false">TerritoryCast_Channel_ID</string>
    <string name="notification_channel_description" translatable="false">Channel ID for TerritoryCast</string>
    <string name="en_desarrollo">No disponible. En desarrollo</string>
    <string name="en_desarrollo_1" translatable="false">Hola :-)</string>
    <string name="en_desarrollo_2">TerritoryCast está en una fase inicial del desarrollo. Muy pronto podrás añadir tus propios rss y podcast, pero por ahora sólo hay uno activo.</string>
    <string name="title_activity_territory_cast_tv" translatable="false">TerritoryCast</string>
    <string name="browse_title" translatable="false"><![CDATA[TerritoryCast]]></string>
    <string name="related_movies" translatable="false">Related Videos</string>
    <string name="grid_view" translatable="false">Grid View</string>
    <string name="error_fragment" translatable="false">Error Fragment</string>
    <string name="personal_settings" translatable="false">Personal Settings</string>
    <string name="watch_trailer_1" translatable="false">Watch trailer</string>
    <string name="watch_trailer_2" translatable="false">FREE</string>
    <string name="rent_1" translatable="false">Rent By Day</string>
    <string name="titulo" translatable="false">Título</string>
    <string name="urlNoticias" translatable="false">Url Feed Noticias</string>
    <string name="urlPodcast" translatable="false">Url Feed Podcast</string>
</resources>